--- a/src/Logn/Components/Pages/Simulator.razor
+++ b/src/Logn/Components/Pages/Simulator.razor
@@ -183,7 +183,7 @@
             {
                 <div>
                     <p class="text-xl font-semibold text-gray-700 mb-2">Step 4: Callback with Auth Token</p>
-                    <p class="text-green-600 font-bold">You are fully logged in (simulation)!</p>
+                    <p class="text-green-600 font-semibold">You are fully logged in (simulation)!</p>
                 </div>
             }
         </div>
